--- a/smieci/app/src/main/res/values/strings.xml
+++ b/smieci/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Smieci</string>
+    <string name="NajblizszyWywoz">Najbliższy wywóz śmieci:</string>
 </resources>
