zmiana useericon, layout edit inf

--- a/smieci/app/src/main/res/values/strings.xml
+++ b/smieci/app/src/main/res/values/strings.xml
@@ -102,6 +102,18 @@
     <string name="informacje">Informacje</string>
     <string name="lokalizacja">Lokalizacja</string>
 
+    <!-- Zmiana hasła -->
+    <string name="zmiana_hasla">Zmień swoje hasło </string>
+    <string name="nowe_haslo">Nowe hasło</string>
+
+    <!-- Nawigacja boczna -->
+    <string name="strona_glowna">Strona główna</string>
+    <string name="ustawienia">Ustawienia</string>
+    <string name="o_nas">O nas</string>
+    <string name="user_email">sample@email.com</string>
+
+    <string name="open">Otwórz</string>
+    <string name="close">Zamknij</string>
 
 
 </resources>
