--- a/smieci/app/src/main/res/values/strings.xml
+++ b/smieci/app/src/main/res/values/strings.xml
@@ -102,6 +102,10 @@
     <string name="informacje">Informacje</string>
     <string name="lokalizacja">Lokalizacja</string>
 
+    <!-- Zmiana Hasla -->
+    <string name="aktualne_haslo">Aktualne hasło</string>
+    <string name="nowe_haslo">Nowe hasło</string>
+    <string name="powtorz_nowe_haslo">Powtórz nowe hasło</string>
 
 
 </resources>
