--- a/smieci/app/src/main/res/values/strings.xml
+++ b/smieci/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="szklo">Szkło</string>
     <string name="bio">Bio</string>
     <string name="metale">Metale i tworzywa sztuczne</string>
-    <string name="metal">Metal i \n plastik</string>
+    <string name="metal">Metal i inne</string>
     <string name="Wywozka_papiery">Wywózka odpadów papierowych</string>
     <string name="Wywozka_szklo">Wywózka odpadów szklanych</string>
     <string name="Wywozka_bio">Wywózka odpadów biodegradowalnych</string>
